// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an error if submitted without an email address 1`] = `
<Form
  as="form"
  error={true}
  onSubmit={[Function]}
>
  <FormField>
    <label>
      Email Address
    </label>
    <FormInput
      as={[Function]}
      autoFocus={true}
      control={[Function]}
      error={true}
      fluid={true}
      name="email"
      onChange={[Function]}
      placeholder="Enter Email Address"
      type="text"
      value=""
    />
  </FormField>
  <Button
    as="button"
    primary={true}
    type="submit"
  >
    Login/Register
  </Button>
</Form>
`;

exports[`renders the email address that was entered 1`] = `
<Form
  as="form"
  error={false}
  onSubmit={[Function]}
>
  <FormField>
    <label>
      Email Address
    </label>
    <FormInput
      as={[Function]}
      autoFocus={true}
      control={[Function]}
      error={false}
      fluid={true}
      name="email"
      onChange={[Function]}
      placeholder="Enter Email Address"
      type="text"
      value="graham@grahamcox.co.uk"
    />
  </FormField>
  <Button
    as="button"
    primary={true}
    type="submit"
  >
    Login/Register
  </Button>
</Form>
`;

exports[`renders without crashing 1`] = `
<Form
  as="form"
  error={false}
  onSubmit={[Function]}
>
  <FormField>
    <label>
      Email Address
    </label>
    <FormInput
      as={[Function]}
      autoFocus={true}
      control={[Function]}
      error={false}
      fluid={true}
      name="email"
      onChange={[Function]}
      placeholder="Enter Email Address"
      type="text"
      value=""
    />
  </FormField>
  <Button
    as="button"
    primary={true}
    type="submit"
  >
    Login/Register
  </Button>
</Form>
`;
